--- a/src/css/error.css
+++ b/src/css/error.css
@@ -22,7 +22,7 @@
 }
 
 .hero__title {
-  font-weight: 800;
+  font-weight: var(--extra-bold);
   font-size: 55px;
 }
 
@@ -33,7 +33,7 @@
 
 .error__title {
   font-size: 35px;
-  font-weight: 600;
+  font-weight: var(--semi-bold);
   padding-bottom: 30px;
 }
 
