--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -3,7 +3,7 @@
 
 .hero__title {
   color: var(--primary-light);
-  font-weight: 800;
+  font-weight: var(--extra-bold);
   font-size: 70px;
   padding: 200px 140px;
   background-size: cover;
@@ -66,14 +66,14 @@ h3 {
 h2,
 h3,
 h4 {
-  font-weight: 700;
+  font-weight: var(--bold);
 }
 
 .faq__wrapper p,
 a,
 i,
 li {
-  font-weight: 300;
+  font-weight: var(--light);
 }
 
 .faq-content {
