--- a/src/css/works.css
+++ b/src/css/works.css
@@ -3,7 +3,7 @@
 
 .section-title {
   font-size: 35px;
-  font-weight: 600;
+  font-weight: var(--semi-bold);
   line-height: 40px;
   color: var(--secondary-dark);
 }
@@ -26,7 +26,7 @@
 
 .hero__title {
   color: var(--primary-dark);
-  font-weight: 800;
+  font-weight: var(--extra-bold);
   font-size: 55px;
   padding: 180px 140px;
   max-width: 800px;
@@ -35,7 +35,7 @@
 .about {
   padding: 105px 0;
   font-size: 30px;
-  font-weight: 500;
+  font-weight: var(--medium);
   text-align: center;
 }
 
@@ -74,7 +74,7 @@
 .works__item-title {
   padding: 35px 0;
   font-size: 25px;
-  font-weight: 600;
+  font-weight: var(--semi-bold);
 }
 
 .works__item-descr {
@@ -126,7 +126,7 @@
 }
 
 .help__link {
-  font-weight: 600;
+  font-weight: var(--semi-bold);
   text-decoration: underline;
 }
 
@@ -153,7 +153,7 @@
 .readyToChat-btn {
   font-size: 20px;
   line-height: normal;
-  font-weight: 600;
+  font-weight: var(--semi-bold);
   text-align: center;
   color: var(--primary-dark);
   width: 100%;
