--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -20,7 +20,7 @@
 .hero__title {
   color: var(--primary-dark);
   font-weight: var(--extra-bold);
-  font-size: 70px;
+  font-size: var(--h1);
   padding: 200px 140px;
 }
 
@@ -33,7 +33,7 @@
 
 .contact__title {
   font-weight: var(--bold);
-  font-size: 35px;
+  font-size: var(--h2);
   padding-bottom: 50px;
 }
 
@@ -66,7 +66,7 @@
 
 .contact__text {
   font-weight: var(--light);
-  font-size: 20px;
+  font-size: var(--p);
   line-height: 25px;
   max-width: 260px;
   margin: 0 auto;
@@ -126,7 +126,6 @@
 
   .hero__title {
     text-align: center;
-    font-size: 50px;
     padding: 15vh 30px;
   }
 
