--- a/src/css/works.css
+++ b/src/css/works.css
@@ -2,7 +2,7 @@
 @import "./nav.css?20190517";
 
 .section-title {
-  font-size: 35px;
+  font-size: var(--h2);
   font-weight: var(--semi-bold);
   line-height: 40px;
   color: var(--secondary-dark);
@@ -27,7 +27,7 @@
 .hero__title {
   color: var(--primary-dark);
   font-weight: var(--extra-bold);
-  font-size: 55px;
+  font-size: var(--h1);
   padding: 180px 140px;
   max-width: 800px;
 }
@@ -73,12 +73,12 @@
 
 .works__item-title {
   padding: 35px 0;
-  font-size: 25px;
+  font-size: var(--h3);
   font-weight: var(--semi-bold);
 }
 
 .works__item-descr {
-  font-size: 20px;
+  font-size: var(--p);
   line-height: 30px;
 }
 
@@ -106,7 +106,7 @@
 }
 
 .faq__descr {
-  font-size: 20px;
+  font-size: var(--p);
   line-height: 30px;
   padding-bottom: 30px;
   max-width: 740px;
@@ -122,7 +122,7 @@
   margin: 0 auto;
   padding-top: 30px;
   color: var(--secondary-dark);
-  font-size: 20px;
+  font-size: var(--p);
 }
 
 .help__link {
@@ -205,7 +205,6 @@
 
   .hero__title {
     text-align: center;
-    font-size: 36px;
     max-width: 240px;
     margin: 0 auto;
     padding: 19vh 0;
@@ -231,12 +230,10 @@
   }
 
   .works__item-title {
-    font-size: 24px;
     padding: 30px 0;
   }
 
   .works__item-descr {
-    font-size: 19px;
     line-height: 25px;
   }
 
