--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -6,14 +6,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../images/contact/contact.jpg);
-  background-image: -webkit-image-set(
-    url(../images/contact/contact.jpg) 1x,
-    url(../images/contact/contact@2x.jpg) 2x
-  );
-  background-image: image-set(
-    url(../images/contact/contact.jpg) 1x,
-    url(../images/contact/contact@2x.jpg) 2x
-  );
+  background-image: -webkit-image-set(url(../images/contact/contact.jpg) 1x,
+      url(../images/contact/contact@2x.jpg) 2x);
+  background-image: image-set(url(../images/contact/contact.jpg) 1x,
+      url(../images/contact/contact@2x.jpg) 2x);
   width: 100%;
 }
 
@@ -73,6 +69,11 @@
   padding-bottom: 30px;
 }
 
+.contact__text_subtitle {
+  margin: 0 auto;
+  padding-top: 10px;
+}
+
 .contact__media {
   font-size: 20px;
   line-height: 25px;
@@ -96,6 +97,7 @@
 .contact__link {
   font-size: 17px;
   border: 3px solid #19b8e9;
+  margin: 0 auto;
   border-radius: 10px;
   width: 260px;
   padding: 10px 0;
