--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -86,6 +86,15 @@ header {
 }
 
 /*top menu hamburger*/
+html {
+  height: 100%;
+}
+
+.page--mobile {
+  height: 100%;
+  overflow: hidden;
+}
+
 .nav-footer .footer-nav-list {
   display: flex;
   justify-content: space-between;
@@ -105,18 +114,19 @@ header {
 /*...header...*/
 .header-wrap {
   padding: 30px 0;
+  height: 90px;
 }
 
 .trigger-menu {
   display: none;
-  width: 35px;
-  height: 26px;
+  width: 30px;
+  height: 18px;
   cursor: pointer;
 }
 
 .trigger-menu__line {
-  height: 3px;
-  width: 100%;
+  height: 2px;
+  width: 80%;
   margin: 7px auto;
   background-color: var(--secondary-dark);
   position: relative;
@@ -129,7 +139,7 @@ header {
 }
 
 .trigger-menu--active .trigger-menu__line:nth-child(1) {
-  transform: translateY(7px) rotate(45deg);
+  transform: translateY(5px) rotate(45deg);
 }
 
 .trigger-menu--active .trigger-menu__line:nth-child(3) {
@@ -146,7 +156,7 @@ header {
   align-items: center;
   list-style: none;
   margin-right: auto;
-  padding-left: 40px;
+  padding-left: 60px;
 }
 
 .nav-list__item {
@@ -176,7 +186,7 @@ header {
   background: transparent;
   border: 2px solid var(--secondary-dark);
   border-radius: 4px;
-  padding: 5px 20px;
+  padding: 8px 18px;
   transition: all 150ms linear;
 }
 
@@ -197,8 +207,7 @@ header {
 }
 
 .nav-list__logo {
-  width: 216px;
-  height: 42px;
+  width: 160px;
   vertical-align: top;
 }
 
@@ -253,27 +262,34 @@ header {
 /*...end footer...*/
 /*...media for header footer...*/
 @media screen and (max-width: 1180px) {
-  header {
+  .header {
     padding: 0 10px;
   }
 
   .nav-list__logo {
     width: 145px;
-    height: 42px;
   }
 }
 
 @media screen and (max-width: 900px) {
   .header-wrap {
     overflow: hidden;
-    height: 90px;
-    transition: all 0.3s ease-in-out;
+    height: 60px;
+    padding: 10px 0;
+  }
+
+  .header {
+    padding: 0 10px 10px;
+  }
+
+  .header--border {
+    border-bottom: 1px solid rgba(50,50,50,0.2);
   }
 
   .header-logo-and-trigger {
     position: absolute;
     right: 15px;
-    top: 32px;
+    top: 15px;
     z-index: 1;
   }
 
@@ -294,7 +310,7 @@ header {
     position: absolute;
     flex-direction: column;
     align-items: center;
-    padding: 70px 0 0 0;
+    padding: 85px 0 0 0;
     left: 50%;
     transform: translate(-50%, 0);
   }
@@ -313,6 +329,7 @@ header {
 
   .nav-list__logo {
     width: 85px;
+    height: 42px;
   }
 
   .portal {
