--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -276,6 +276,7 @@ html {
     overflow: hidden;
     height: 60px;
     padding: 10px 0;
+    transition: all 0.3s ease-in-out;
   }
 
   .header {
