--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -174,7 +174,12 @@ html {
   text-align: left;
   color: var(--secondary-dark);
   white-space: nowrap;
-  transition: all 150ms linear;
+}
+
+.nav-list__link--active {
+  padding-bottom: 31px;
+  border-bottom: 2px solid var(--link-dark);
+  color: var(--link-dark);
 }
 
 .nav-list__link--active {
