update padding for the mobile menu dropdown

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -303,7 +303,7 @@ header {
     width: 100%;
     padding: 0;
     top: 85px;
-    left: 0;
+    left: 22px;
     transform-origin: -100% -100%;
     transform: translate(102%,0);
     transition: transform .5s cubic-bezier(.77,.2,.05,1);
