--- a/src/css/business.css
+++ b/src/css/business.css
@@ -33,15 +33,16 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/business/business_bg.jpg);
+  background-image: url(../images/business/business.jpg);
   background-image: -webkit-image-set(
-    url(../images/business/business_bg.jpg) 1x,
-    url(../images/business/business_bg@2x.jpg) 2x
+    url(../images/business/business.jpg) 1x,
+    url(../images/business/business@2x.jpg) 2x
   );
   background-image: image-set(
-    url(../images/business/business_bg.jpg) 1x,
-    url(../images/business/business_bg@2x.jpg) 2x
+    url(../images/business/business.jpg) 1x,
+    url(../images/business/business@2x.jpg) 2x
   );
+  max-height: 520px;
 }
 
 .introduction-wrap::after {
