--- a/src/css/get-in-touch.css
+++ b/src/css/get-in-touch.css
@@ -5,7 +5,16 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/get-in-touch/get-in-touch-bg.jpg);
+  background-image: url(../images/get-in-touch/get-in-touch.jpg);
+  background-image: -webkit-image-set(
+    url(../images/get-in-touch/get-in-touch.jpg) 1x,
+    url(../images/get-in-touch/get-in-touch@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/get-in-touch/get-in-touch.jpg) 1x,
+    url(../images/get-in-touch/get-in-touch@2x.jpg) 2x
+  );
+  max-height: 520px;
   width: 100%;
   color: var(--primary-light);
   padding: 200px 140px;
